# ballduck

./: .gitignore  Cargo.toml  Makefile  README.md  book.toml
design/: scripting.md
doc/: 00-introduction.md  01-quickstart.md  02-integration.md
examples/: array.bs  dictionary.bs  echo.bs  escape_sequences.bs  factorial.bs  fizzbuzz.bs  hello.bs  iter_str.bs  locals.bs  loops.bs  sieve.bs  sort-selection.bs  vars.bs  vec2.bs  while.bs
lib/: Cargo.toml
lib/src/: ast.rs  environment.rs  lib.rs  script.rs  tokenizer.rs  types.rs  util.rs  variant.rs
lib/src/bytecode/: builder.rs  mod.rs  thin.rs  tracer.rs
lib/src/variant/: mod.rs
lib/src/variant/specialized/: copy.rs  mod.rs
script/: Cargo.toml  Makefile
script/examples/: array.bs  count.bs  dictionary.bs  factorial.bs  fizzbuzz.bs  hello.bs  iter_str.bs  sieve.bs  vars.bs  vec2.bs  while.bs
script/src/: ast.rs  bin.rs  bytecode.rs  environment.rs  lib.rs  script.rs  tokenizer.rs  types.rs  variant.rs  µ
script/src/bytecode/: builder.rs  mod.rs
script/test/expression/: indices.bs
script/test/malformed/: undefined_variable.bs
stdenv/: Cargo.toml
test/: chain.bs  constant.bs
test/expression/: call_no_assign.bs
test/loops/: nested_break.bs
