[package]
name = "ballscript"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"
license = "MIT"

[dependencies]
rustc-hash = { version = "*", default-features = false }
#hashbrown = { version = "*", optional = true }
unwrap_none = "*"

[features]
default = ["std"]
std = []
unsafe-loop = []
