[package]
name = "ballduck_script"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"

[dependencies]
rustc-hash = "*"
unwrap_none = "*"

[lib]
name = "ballscript"
path = "src/lib.rs"

[[bin]]
name = "ballscript"
path = "src/bin.rs"

[features]
unsafe-loop = []
