[package]
name = "ballduck_script"
version = "0.1.0"
authors = ["David Hoppenbrouwers <david@salt-inc.org>"]
edition = "2018"
license = "MIT"

[dependencies]
rustc-hash = "*"
unwrap_none = "*"

[lib]
name = "ballscript"
path = "src/lib.rs"

[[bin]]
name = "bs"
path = "src/bin.rs"

[features]
unsafe-loop = []
